crates/sdk-tests/tests/ctor/ctor_used_twice_fails.rs
use svm_sdk::template;

#[template]
mod Template {
    #[ctor]
    #[ctor]
    fn get() {}
}

fn main() {}
